css/main.css
/* Base */
/* ----------------------------------------------------------*/

* {
  margin: 0;
  padding: 0;
}

html, body { height: 100%; }

body {
  background-color: #fdfdfd;
  padding-top: 60px;
}

a         { color: #da131a; fill: #da131a; text-decoration: none; }
a:hover   { color: #da131a; text-decoration: underline; }
a:visited { color: #ad0f15; fill: #ad0f15; }

/* Utility */

.wrap:before,
.wrap:after { content:""; display:table; }
.wrap:after { clear: both; }
.wrap {
  max-width: 1140px;
  padding: 0 30px;
  margin: 0 auto;
  zoom: 1;  
}

.page-content .wrap {
  box-shadow: 0px 0px 18px rgba(0, 0, 0, 0.4);
}


/* Layout Styles */
/* ----------------------------------------------------------*/

/* Site header */

.navbar-default .navbar-brand {
  color: #da131a;
}
.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
  color: #da131a;
}

.navbar-default .navbar-nav > li > a {
  position: relative;
  color: #da131a;
  text-decoration: none;
}

.navbar-default .navbar-nav > li > a:hover {
  color: #da131a;
}

.navbar-default .navbar-nav > li > a:before {
  content: "";
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: #da131a;
  visibility: hidden;
  transform: scaleX(0);
  transition: all 0.3s ease-in-out 0.1s;
}

.navbar-default .navbar-nav > li > a:hover:before {
  visibility: visible;
  transform: scaleX(1);
}

.navbar-default .navbar-nav > li.active-nav-item {
  box-shadow: inset #da131a 0 -2px 0 0;
}

.form-control:focus {
  border-color: #da131a;
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.6);
}

/* Search and dropdown styles*/
/* ----------------------------------------------------------*/

.search {
  position: relative;
}

.search input {
  padding-left: 30px;
}

.search .icon {
  position: absolute;
  margin-left: 7px;
  margin-top: 7px;
  color: #bbb;
}

.search input:focus + .search-results {
  display: block;
}

.dropdown-menu,
.search-results {
  display: none;
  position: absolute;
  margin-top: 16px;
  z-index: 10;
  background: #fdfdfd;
  border: 1px solid;
  border-color: #cbcfe2 #c8cee7 #c4c7d7;
  border-radius: 3px;
  background-image: linear-gradient(to bottom, #fdfdfd, #eceef4);
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
}
.search-results:hover {
  display: block;
}
.search-results li {
  display: block;
}
.search-results li:first-child {
  margin-top: -1px;
}
.search-results li:first-child:before, .search-results li:first-child:after {
  content: '';
  display: block;
  width: 0;
  height: 0;
  position: absolute;
  left: 50%;
  margin-left: -5px;
  border: 5px outset transparent;
}
.search-results li:first-child:before {
  border-bottom: 5px solid #c4c7d7;
  top: -11px;
}
.search-results li:first-child:after {
  border-bottom: 5px solid #fdfdfd;
  top: -10px;
}
.search-results li:first-child:hover:before, .search-results li:first-child:hover:after {
  display: none;
}
.search-results li:last-child {
  margin-bottom: -1px;
}

.dropdown-menu > li > a,
.search-results a {
  display: block;
  position: relative;
  margin: 0 -1px;
  padding: 6px 6px 6px 10px;
  color: #808394;
  font-weight: 500;
  text-shadow: 0 1px white;
  border: 1px solid transparent;
  border-radius: 3px;
}

.modal-header,
.dropdown-toggle[aria-expanded="true"],
.dropdown-menu > li > a:hover,
.search-results a:hover {
  color: white !important;
  text-shadow: 0 -1px rgba(0, 0, 0, 0.3);
  text-decoration: none;
  background-image: linear-gradient(to bottom, #da131a, #ad0f15);
  box-shadow: inset 0 1px rgba(255, 255, 255, 0.2), 0 1px rgba(0, 0, 0, 0.08);
}

/* Site footer */

.site-footer {
  border-top: 1px solid #e8e8e8;
  padding: 30px 0;
}

/* Page Content styles */
/* ----------------------------------------------------------*/

.page-content {
  padding: 30px 0;
  background-color: #fff;
}

.page-content img {
  max-width: 60%;
  text-align: center;
}

.embed-container { 
  position: relative;
  padding-bottom: 56.25%;
  height: 0;
  overflow: hidden;
  max-width: 100%;
  height: auto;
}

.embed-container iframe, .embed-container object, .embed-container embed { 
  position: absolute; 
  top: 0; 
  left: 0; 
  width: 100%; 
  height: 100%;
}

/* Home styles */
/* ----------------------------------------------------------*/

.home h1 { margin-bottom: 25px; }

.posts { list-style-type: none; }

.posts li { margin-bottom: 20px; }

.posts .post-link {
  font-size: 20px;
  letter-spacing: -0.5px;
  line-height: 1;
}

.posts .post-date {
  display: block;
  font-size: 15px;
  color: #818181;
}


/* Post styles */
/* ----------------------------------------------------------*/
.meta {
  font-size: 15px;
  color: #818181;
  margin-top: 5px;
}

/* media queries */
/* ----------------------------------------------------------*/
@media screen and (max-width: 600px) {

  .site-nav {
    position: fixed;
    z-index: 10;
    top: 14px; right: 8px;
    background-color: white;
    border-radius: 5px;
    border: 1px solid #e8e8e8;
  }

  .site-nav .menu-icon {
    display: block;
    font-size: 24px;
    color: #505050;
    float: right;
    width: 36px;
    text-align: center;
    line-height: 36px;
  }

  .site-nav .menu-icon svg { width: 18px; height: 16px; }

  .site-nav .trigger {
    clear: both;
    margin-bottom: 5px;
    display: none;
  }

  .site-nav:hover .trigger { display: block; }

  .site-nav .page-link {
    display: block;
    text-align: right;
    line-height: 1.25;
    padding: 5px 10px;
    margin: 0;
  }

  .post-header h1 { font-size: 34px; }
  .post-content h2 { font-size: 26px; }
  .post-content h3 { font-size: 20px; }
  .post-content h4 { font-size: 16px; }
  .post-content blockquote { padding-left: 10px; }
}

/* Calendar styles */
/* ----------------------------------------------------------*/

.calendar th {text-align: center;}
.calendar td {
  border: 1px solid #AEAEAE;
  width: 5em;
  height: 5em;
  max-width: 5em;
  padding: 0;
}
.calendar thead tr:first-child th {
  font-size: large;
  padding-bottom: 0.5em;
}
.calendar thead tr:last-child th {
  font-weight: normal;
  font-size: small;
  color: #939393;
}
.calendar .prev {float: left;}
.calendar .prev:before {content: "\00AB";}
.calendar .next {float: right;}
.calendar .next:after {content: "\00BB";}
.calendar .today { background-color: #E9EFF8;}
.calendar .extra {color: #AEAEAE;}
.calendar .daynum {
  text-align: right;
  padding-right: 0.5ex;
}
.calendar .dayevent {
  font-size: 11px;
  color: #da131a;
  cursor: pointer;
  padding-left: 0.5ex;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.calendar .btn {
  background-color: #e6e6e6;
  background-repeat: no-repeat;
  background-image: linear-gradient(#ffffff, #ffffff 25%, #e6e6e6);
  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);
  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
  color: #333;
  font-size: 13px;
  line-height: normal;
  border: 1px solid #ccc;
  border-bottom-color: #bbb;
  border-radius: 4px;
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2),0 1px 2px rgba(0, 0, 0, 0.05);
  transition: 0.3s linear all;
}

.calendar .btn:hover {
  background-position: 0 -15px;
  color:#333;
  text-decoration:none;
}

/* Longlist styles */
/* ----------------------------------------------------------*/

.paging-controls {text-align: center;}
.paging-controls a {color: #da131a;}
.paging-controls a:visited {color: #ad0f15;}
.paging-controls .prev {float: left;}
.paging-controls .prev:before {content: "\00AB  neuere";}
.paging-controls .next {float: right;}
.paging-controls .next:after {content: "ältere \00BB";}
.paging-controls .elipsis:before {content: " ... ";}

/* Chart styles */
/* ----------------------------------------------------------*/

iframe {
  border: solid 1px #eee;
  border-bottom: solid 1px #ccc;
  height: 500px;
}

h2, iframe {
  width: 100%;
}

.chart-pop {
  position: absolute;
  right: 10px;
}

.chart-pop svg {
  margin-left: 0.3em;
  position: relative;
  top: 3px;
}

.chart-info {
  max-width: 450px;
}

/* Video styles */
/* ----------------------------------------------------------*/

video {
  display: block;
  margin: 10px auto;
  width: 640px;
  max-width: 90%;
}

/* Gallery styles */
/* ----------------------------------------------------------*/
.gallery img {
  max-width: 100%;
  border: 2px solid #fdfdfd;
  transition: border-color 0.5s ease-out;
  margin-top: 10px;		
  margin-bottom: 10px;
}

.gallery img:hover {
  border-color: #da131a;
  transition: none;
}

/* Chatbox styles */
/* ----------------------------------------------------------*/
.chatbox {
  height: 400px;
  overflow-y: auto;
}

#messages { list-style-type: none; }
#messages li:nth-child(odd) { background: #f5f5f5; }

/* Share styles */
/* ----------------------------------------------------------*/
.share {
  font-weight: bold;
}
.share-icon {
  margin: 0 10px;
}

img.loaded, video.loaded {
  animation: fadeIn 1s both;
}
@keyframes fadeIn {
  0% { opacity: 0; }
  100% { opacity: 1; }
}

/* Bootstrap overrides */
/* ----------------------------------------------------------*/
.row {
  padding-bottom: 10px;
}

